# autonomous-customer-care-agents

./: .env.example  .gitignore  .npmrc  CLAUDE.md  Makefile  PRD.md  README.md  ROADMAP.md  docker-compose.local.yml  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0080e6c2bf8f_conversation_escalation_cols_priority_.py  8df9472b4aaa_initial_conversation_message_knowledge_.py  a7e4c1b93d52_gate_rules_for_new_intents.py  b8d2f60c4e19_gate_rule_store_information.py  c3f1a9d47b28_auth_users_gate_config_customer_id.py  d4a71fe5c806_knowledge_document_console_cols.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/agents/: graph.py  policy.py  state.py
apps/backend/app/api/: deps.py
apps/backend/app/core/: config.py  database.py  embeddings.py  logging.py  qdrant_client.py  redis_client.py  security.py
apps/backend/app/models/: __init__.py  audit_log.py  base.py  conversation.py  enums.py  gate_config.py  gate_intent_rule.py  knowledge_document.py  message.py  user.py
apps/backend/app/schemas/: admin.py  agent.py  auth.py  conversation.py  gate.py  knowledge.py  (+1 more)
apps/backend/knowledge/: README.md  facts.md
apps/backend/tests/: test_decision.py  test_escalation.py  test_gate.py  test_graph.py  test_history.py  test_hitl_contract.py  test_hub.py  test_intent.py  test_kb_ingest.py  test_knowledge.py  test_rag_extract.py  test_response.py  test_search_intent.py  test_taxonomy_sync.py  test_ws_gating.py
(+100 files in other folders)
